# vaulty

./: .gitignore  App.tsx  README.md  TAURI_MIGRATION.md  constants.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
.github/workflows/: release.yml
components/: Button.tsx  Database.tsx  DatabaseView.tsx  ErrorBoundary.tsx  ExerciseEditor.tsx  Extractor.tsx  FileUpload.tsx  FirstRunSetup.tsx  PdfViewer.tsx  Settings.tsx  Sidebar.tsx  Spinner.tsx
components/icons/: CheckIcon.tsx  EditIcon.tsx  PlusIcon.tsx  TagIcon.tsx  XIcon.tsx
components/ui/: NavBar.tsx
hooks/: index.ts  useCanvasDrawing.ts  usePdfProcessing.ts
lib/: utils.ts
scripts/: build-macos.sh
services/: db.ts  geminiService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  gemini.rs  lib.rs  main.rs
utils/: pdfUtils.ts
